# auto_jetbra

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  main.py  pyproject.toml
activation/: __init__.py  activate.py  downloader.py  driver.py  get_mirror.py  ides.py  message.py  parser.py
docs/: activation.rst  conf.py  features.rst  index.rst  run.rst  stack.rst
